[project]
name = "comfyui_darask_node"
description = "DARASK custom nodes: prompt-cell combinatorics, LoRA stacking, LTX 2.3 video tools, RIFE interpolation, and Anima sampling/step-cache tuning. The hires-fix toolchain (folder image queue + EXIF restoration) lives in ComfyUI-darask-hiresfix."
version = "0.3.0"
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = []

[project.urls]
Repository = "https://github.com/daraskme/comfyui_darask_node"
"Bug Tracker" = "https://github.com/daraskme/comfyui_darask_node/issues"

[tool.comfy]
PublisherId = "daraskme"
DisplayName = "DARASK Nodes"
Icon = ""
